Update 프로젝트 상세 설명.md

--- a/DataFest2023/프로젝트 상세 설명.md
+++ b/DataFest2023/프로젝트 상세 설명.md
@@ -15,14 +15,16 @@
 <br/>
 
 ### [문제점] 
-![image](https://github.com/YounseoKim62/Data-Analysis-Projects-KR/assets/161654460/e12eb63d-11ec-43b3-8937-32e171cf4cd5)
+![image](https://github.com/YounseoKim62/Data-Analysis-Projects-KR/assets/161654460/755b5595-8ebb-421f-a406-5fc56905ae66)
+
 * 주 (State)마다 무료 법률 서비스 기준이 다름
 * 무료 법률 서비스 기준은 자산과 수입 두 가지 기준을 모두 충족해야 하며, 관련 변수들이 나뉘어져 있어 변호사들이 의뢰인이 무료 법률 서비스 기준에 부합하는지를 한눈에 판단하기 어려움
 
 <br/>
 
 ### [데이터 전처리]
-![image](https://github.com/YounseoKim62/Data-Analysis-Projects-KR/assets/161654460/f4024628-8194-443a-9a11-18c72e8df8c6)
+![image](https://github.com/YounseoKim62/Data-Analysis-Projects-KR/assets/161654460/1dc01640-8711-40b6-b8d4-16b47b4233bd)
+
 1. AnnualIncome (수입 변수)가 NULL인 경우 자산 관련 변수들도 모두 NULL이므로 **AnnualIncome이 NULL인 의뢰인들을 제거**
 2. 자산과 수입에 관련된 변수들이 범주형 변수 (Categorical Variable)로 저장되어 있어 **숫자형 변수 (Numeric Variable)로 변환**
 3. 의뢰인 데이터셋의 StateAbbr변수를 통해 주별 무료 법률 서비스 기준 데이터셋을 **LEFT JOIN하여 통합된 데이터셋 생성**
@@ -33,6 +35,7 @@
 
 ### [알고리즘 개발]
 ![image](https://github.com/YounseoKim62/Data-Analysis-Projects-KR/assets/161654460/64cb43c4-19ac-4c9f-9607-6429093e605b)
+
 1. 수입 기준:
 * AnnualIncome이 AllowedIncome보다 낮으면 ProBono_income을 'Y', 높으면 'N'으로 저장
 2. 자산 기준:
@@ -52,14 +55,19 @@
 <br/> 
 
 ### [문제점]
-![image](https://github.com/YounseoKim62/Data-Analysis-Projects-KR/assets/161654460/28a52b2e-88a1-450f-a971-8805d8348e91)
+![image](https://github.com/YounseoKim62/Data-Analysis-Projects-KR/assets/161654460/eeb7287e-6b40-48e2-98dc-718d38fbf9a1)
+
 * 의뢰인이 변호사의 전문 분야 또 실력을 판단할 수 있는 요소가 없음
 * 변호사가 지금까지 의뢰인들과 얼마나 상담했는지, 어떤 전문 분야에서 가장 많이 상담했는지, 얼마나 많은 의뢰를 처리했는지 한 눈에 파악할 수 없음
 
  <br/> 
 
  ### [데이터 전처리]
+ ![image](https://github.com/YounseoKim62/Data-Analysis-Projects-KR/assets/161654460/5d0a1f4d-5f27-4924-a70a-02c9e452eade)
+ 
  1. 'questions' (상담 기록 데이터셋)에서 **변호사가 답을 하지 않은 기록들을 제거** (TakenByAttorneyUno가 NULL인 경우)
- 2. 'questions'에서 변호사가 가장 많이 답변한 Category (전문분야)와 Subcategory (세부 전문분야)를 분석하여 변호사의 **전문분야와 세부 전문분야를 알려주는 Cateogry, Subcategory 1, Subcategory 2, Subcategory 3이이라는 파생변수들을 생성**
+ 2. 'questions'에서 변호사가 가장 많이 답변한 Category (전문분야)와 Subcategory (세부 전문분야)를 분석하여 변호사의 **전문분야와 세부 전문분야를 알려주는 변수들을 기존 변호사 데이터셋 (attorneys)에 생성**
+ 3. 'questions' 데이터셋에서 변호사가 맡은 상담 기록의 횟수를 **NumberofCases라는 변수를 'attorneys'에 생성**
+ 4. 'attorneytimeentries' (상담 당 변호사가 할애한 시간 데이터셋)에서 변호사가 할애한 시간의 총합을 **TotalHours라는 변수를 'attorneys'에 생성**
 
 
