Update 프로젝트 상세 설명.md

--- a/DataFest2023/프로젝트 상세 설명.md
+++ b/DataFest2023/프로젝트 상세 설명.md
@@ -65,9 +65,10 @@
  ### [데이터 전처리]
 ![image](https://github.com/YounseoKim62/Data-Analysis-Projects-KR/assets/161654460/5e3f3bde-80ea-49ff-af3e-ab64c35441bd)
 
-  1. 'questions' (상담 기록 데이터셋)에서 **변호사가 답을 하지 않은 기록들을 제거** (TakenByAttorneyUno가 NULL인 경우)
+ 1. 'questions' (상담 기록 데이터셋)에서 **변호사가 답을 하지 않은 기록들을 제거** (TakenByAttorneyUno가 NULL인 경우)
  2. 'questions'에서 변호사가 가장 많이 답변한 Category (전문분야)와 Subcategory (세부 전문분야)를 분석하여 변호사의 **전문분야와 세부 전문분야를 알려주는 변수들을 기존 변호사 데이터셋 (attorneys)에 생성**
  3. 'questions' 데이터셋에서 변호사가 맡은 상담 기록의 횟수를 **NumberofCases라는 변수를 'attorneys'에 생성**
  4. 'attorneytimeentries' (상담 당 변호사가 할애한 시간 데이터셋)에서 변호사가 할애한 시간의 총합을 **TotalHours라는 변수를 'attorneys'에 생성**
+* *모든 변수들이 NULL인 변호사는 등록만 되어 있을 뿐, 상담을 진행하지 않은 변호사임*
 
 
