Update 프로젝트 상세 설명.md

--- a/DataFest2023/프로젝트 상세 설명.md
+++ b/DataFest2023/프로젝트 상세 설명.md
@@ -71,4 +71,15 @@
  4. 'attorneytimeentries' (상담 당 변호사가 할애한 시간 데이터셋)에서 변호사가 할애한 시간의 총합을 **TotalHours라는 변수를 'attorneys'에 생성**
 * *모든 변수들이 NULL인 변호사는 등록만 되어 있을 뿐, 상담을 진행하지 않은 변호사임*
 
+ <br/> 
+
+### [알고리즘 개발]
+![image](https://github.com/YounseoKim62/Data-Analysis-Projects-KR/assets/161654460/fae49738-c932-47a7-9297-56aa836132e5)
+
+1. TotalHours와 NumberofCases의 하위 40%, 60%, 100%의 기준값을 구하여 TotalHoursLevel과 NumberofCasesLevel의 기준점을 설정
+2. TotalHours에 대해 하위 40%는 Level 1, 40%에서 80% 사이는 Level 2, 80%에서 100% 사이는 Level 3으로 설정하며, TotalHours가 0인 경우는 Level 1로 간주
+3. NumberofCases에 대해서도 동일하게 적용하여 NumberofCasesLevel 변수를 생성하되, NumberofCases가 0인 경우는 Level 1로 간주
+4. TotalHoursLevel과 NumberofCasesLevel을 종합하여 변호사의 전체적인 실력을 판단할 수 있는 Level 변수를 생성
+   
+
 
