--- a/DataFest2023/프로젝트 상세 설명.md
+++ b/DataFest2023/프로젝트 상세 설명.md
@@ -6,7 +6,7 @@
 <br/>
 
 ## [프로젝트 소개]
-* 미국 변호사 협회에서 제공한 50만 건 이상의 의뢰인 데이터, 2만 명의 변호사 데이터, 30만 건 이상의 상담 데이터를 활용하여 협회의 무료 법률 지원 서비스의 효율성을 개선한 프로젝트
+* 미국 변호사 협회에서 제공한 50만 건 이상의 의뢰인 데이터, 2만 명의 변호사 데이터, 30만 건 이상의 상담 데이터를 활용하여 협회의 무료 법률 지원 상담 서비스의 효율성을 개선한 프로젝트
 
 <br/>
 
@@ -15,7 +15,7 @@
 <br/>
 
 ### [문제점] 
-![image](https://github.com/YounseoKim62/Data-Analysis-Projects-KR/assets/161654460/755b5595-8ebb-421f-a406-5fc56905ae66)
+![image](https://github.com/YounseoKim62/Data-Analysis-Projects-KR/assets/161654460/939aa7e5-9608-4938-b8f7-27e8f9676ae4)
 
 * 주 (State)마다 무료 법률 서비스 기준이 다름
 * 무료 법률 서비스 기준은 자산과 수입 두 가지 기준을 모두 충족해야 하며, 관련 변수들이 나뉘어져 있어 변호사들이 의뢰인이 무료 법률 서비스 기준에 부합하는지를 한눈에 판단하기 어려움
