Update 프로젝트 상세 설명.md

--- a/DataFest2023/프로젝트 상세 설명.md
+++ b/DataFest2023/프로젝트 상세 설명.md
@@ -27,11 +27,11 @@
 
 ![image](https://github.com/YounseoKim62/Data-Analysis-Projects-KR/assets/161654460/1c9d95f5-dbf8-4ef1-8720-3960da4b39ee)
 
-1. AnnualIncome (수입 변수)가 NULL인 경우 자산 관련 변수들도 모두 NULL이므로 **AnnualIncome이 NULL인 의뢰인들을 제거**
-2. 자산과 수입에 관련된 변수들이 범주형 변수 (Categorical Variable)로 저장되어 있어 **숫자형 변수 (Numeric Variable)로 변환**
-3. 의뢰인 데이터셋의 StateAbbr변수를 통해 주별 무료 법률 서비스 기준 데이터셋을 **LEFT JOIN하여 통합된 데이터셋 생성**
+1. 'clients' (의뢰인 데이터셋)의 AnnualIncome (수입 변수)가 NULL인 경우 자산 관련 변수들도 모두 NULL이므로 **AnnualIncome이 NULL인 의뢰인들을 제거**
+2. 'clients'의 자산과 수입에 관련된 변수들이 Categorical Variable (범주형 변수)로 저장되어 있어 **Numeric Variable (숫자형 변수)로 변환**
+3. 'clients'의 StateAbbr변수를 통해 'statesites' (주별 무료 법률 서비스 기준 데이터셋)을 **LEFT JOIN하여 통합된 데이터셋 생성**
 4. *(대회 진행요원이 자산과 관련된 변수들에서 의뢰인들이 0을 적는 대신 기입을 하지 않은 경우가 많다고 하여, 자산과 관련된 변수들 중 1개 이상 기입한 의뢰인들에 한해서는 NULL 값을 0으로 간주함)* <br/> 
-자산과 관련된 변수들을 하나의 변수로 통합한 **sum_assets 파생변수 생성**
+'clients'의 자산과 관련된 변수들을 하나의 변수로 통합한 **sum_assets 파생변수 생성**
 
 <br/> 
 
@@ -41,7 +41,7 @@
 1. 수입 기준:
 * AnnualIncome이 AllowedIncome보다 낮으면 ProBono_income을 'Y', 높으면 'N'으로 저장
 2. 자산 기준:
-* 주별 무료 법률 기준 데이터셋에 없는 주 출신의 경우 ProBono_assets를 'NAA (No Allowed Assets)'로 저장
+* 'statesites' (주별 무료 법률 기준 데이터셋)에 없는 주 출신의 경우 ProBono_assets를 'NAA (No Allowed Assets)'로 저장
 * 자산 관련 변수들이 모두 NULL이면 ProBono_assets를 'NC (Not Classified)'로 저장
 * sum_assets가 AllowedAssets보다 낮으면 ProBono_assets를 'Y', 높으면 'N'으로 저장
 3. 최종 판정:
@@ -68,8 +68,8 @@
 ![image](https://github.com/YounseoKim62/Data-Analysis-Projects-KR/assets/161654460/5e3f3bde-80ea-49ff-af3e-ab64c35441bd)
 
  1. 'questions' (상담 기록 데이터셋)에서 **변호사가 답을 하지 않은 기록들을 제거** (TakenByAttorneyUno가 NULL인 경우)
- 2. 'questions'에서 변호사가 가장 많이 답변한 Category (전문분야)와 Subcategory (세부 전문분야)를 분석하여 변호사의 **전문분야와 세부 전문분야를 알려주는 변수들을 기존 변호사 데이터셋 (attorneys)에 생성**
- 3. 'questions' 데이터셋에서 변호사가 맡은 상담 기록의 횟수를 **NumberofCases라는 변수를 'attorneys'에 생성**
+ 2. 'questions'에서 변호사가 가장 많이 답변한 Category (전문분야)와 Subcategory (세부 전문분야)를 분석하여 변호사의 **전문분야와 세부 전문분야를 알려주는 변수들을 기존 'attorneys' (변호사 데이터셋)에 생성**
+ 3. 'questions'에서 변호사가 맡은 상담 기록의 횟수를 **NumberofCases라는 변수를 'attorneys'에 생성**
  4. 'attorneytimeentries' (상담 당 변호사가 할애한 시간 데이터셋)에서 변호사가 할애한 시간의 총합을 **TotalHours라는 변수를 'attorneys'에 생성**
 * *모든 변수들이 NULL인 변호사는 등록만 되어 있을 뿐, 상담을 진행하지 않은 변호사임*
 
