--- a/DataFest2023/프로젝트 상세 설명.md
+++ b/DataFest2023/프로젝트 상세 설명.md
@@ -64,7 +64,7 @@
 * 의뢰인이 변호사의 전문 분야 또 실력을 판단할 수 있는 요소가 없음
 * 변호사가 지금까지 의뢰인들과 얼마나 상담했는지, 어떤 전문 분야에서 가장 많이 상담했는지, 얼마나 많은 의뢰를 처리했는지 한 눈에 파악할 수 없음
 
- <br/> 
+<br/> 
 
  ### [데이터 전처리]
 ![image](https://github.com/YounseoKim62/Data-Analysis-Projects-KR/assets/161654460/b91fb619-1363-4c9e-a09c-f61a19ef65f9)
@@ -75,7 +75,7 @@
  4. 'attorneytimeentries' (상담 당 변호사가 할애한 시간 데이터셋)에서 변호사가 할애한 시간의 총합을 **TotalHours라는 변수를 'attorneys'에 생성**
 * *모든 변수들이 NULL인 변호사는 등록만 되어 있을 뿐, 상담을 진행하지 않은 변호사임*
 
- <br/> 
+<br/> 
 
 ### [알고리즘 개발]
 ![image](https://github.com/YounseoKim62/Data-Analysis-Projects-KR/assets/161654460/fae49738-c932-47a7-9297-56aa836132e5)
@@ -84,6 +84,26 @@
 2. TotalHours에 대해 하위 40%는 Level 1, 40%에서 80% 사이는 Level 2, 80%에서 100% 사이는 Level 3으로 설정하며, TotalHours가 0인 경우는 Level 1로 간주
 3. NumberofCases에 대해서도 동일하게 적용하여 NumberofCasesLevel 변수를 생성하되, NumberofCases가 0인 경우는 Level 1로 간주
 4. TotalHoursLevel과 NumberofCasesLevel을 종합하여 변호사의 전체적인 실력을 판단할 수 있는 Level 변수를 생성
-   
 
+<br/> 
+
+## Step 3 (미국 내 법률 상담 트렌드 분석)
+
+### 
+![image](https://github.com/YounseoKim62/Data-Analysis-Projects-KR/assets/161654460/75161971-a632-4db0-b4d0-60bf2c085f4e)
+
+* 주 별로 미국 변호사 협회의 무료 법률 상담 서비스에서 가장 많이 상담한 카테고리를 보았을 때 가족 및 아동(Family and Children)이 가장 많이 상담된 것을 알수있음
+* 가족 및 아동 카테고리가 가장 많이 상담된 것을 보아 많은 주에서 이혼, 양육권 분쟁, 가정 폭령 등 가족과 관련된 문제가 많이 일어난다는 것을 알 수 있음
+
+###
+![image](https://github.com/YounseoKim62/Data-Analysis-Projects-KR/assets/161654460/88b2c294-08f8-4a43-b915-c1bfb03b289d)
+
+* 주 별로 미국 변호사 협회의 무료 법률 상담 서비스에서 두번째로 많이 상담한 카테고리를 보았을 때 기타(Others)이 가장 많이 상담된 것을 알수있음
+* 기타 카테고리는 상해, 자연재해, 이민, 세금과 관련된 상담들이 포함되므로 많은 주에서 일상 생활과 관련된 문제가 많다는 것을 알 수 있음
+
+### 
+![image](https://github.com/YounseoKim62/Data-Analysis-Projects-KR/assets/161654460/b1cecf1d-22f5-412c-a98d-13561b8622b8)
+
+* 주 별로 미국 변호사 협회의 무료 법률 상담 서비스에서 세번째로 많이 상담한 카테고리를 보았을 때 주거 및 노숙자 (Housing and Homelessness)가 가장 많이 상담된 것을 알수있음
+*  여러 주에서 주거 및 노숙자 문제가 많이 상담된 것을 보아 주거 안전성, 세입자 권리 및 노숙자 문제와 관련된 문제가 많다는 것을 알 수 있음음
 
