Update 프로젝트 상세 설명.md

--- a/DataFest2023/프로젝트 상세 설명.md
+++ b/DataFest2023/프로젝트 상세 설명.md
@@ -92,18 +92,18 @@
 ### 
 ![image](https://github.com/YounseoKim62/Data-Analysis-Projects-KR/assets/161654460/75161971-a632-4db0-b4d0-60bf2c085f4e)
 
-* 주 별로 미국 변호사 협회의 무료 법률 상담 서비스에서 가장 많이 상담한 카테고리를 보았을 때 가족 및 아동(Family and Children)이 가장 많이 상담된 것을 알수있음
-* 가족 및 아동 카테고리가 가장 많이 상담된 것을 보아 많은 주에서 이혼, 양육권 분쟁, 가정 폭령 등 가족과 관련된 문제가 많이 일어난다는 것을 알 수 있음
+* 주 별로 미국 변호사 협회의 무료 법률 상담 서비스에서 가장 많이 상담한 카테고리를 보았을 때 **가족 및 아동(Family and Children)이 가장 많이 상담된 것을 알수있음**
+* 가족 및 아동 카테고리가 가장 많이 상담된 것을 보아 **많은 주에서 이혼, 양육권 분쟁, 가정 폭령 등 가족 갈등과 관련된 법률상담이 많이 일어난다는 것을 알 수 있음**
 
 ###
 ![image](https://github.com/YounseoKim62/Data-Analysis-Projects-KR/assets/161654460/88b2c294-08f8-4a43-b915-c1bfb03b289d)
 
-* 주 별로 미국 변호사 협회의 무료 법률 상담 서비스에서 두번째로 많이 상담한 카테고리를 보았을 때 기타(Others)이 가장 많이 상담된 것을 알수있음
-* 기타 카테고리는 상해, 자연재해, 이민, 세금과 관련된 상담들이 포함되므로 많은 주에서 일상 생활과 관련된 문제가 많다는 것을 알 수 있음
+* 주 별로 미국 변호사 협회의 무료 법률 상담 서비스에서 두번째로 많이 상담한 카테고리를 보았을 때 **기타(Others)이 가장 많이 상담된 것을 알수있음**
+* 기타 카테고리는 상해, 자연재해, 이민, 세금과 관련된 상담들이 포함되므로 많은 주에서 **일상 생활과 관련된 법률상담이 많다는 것을 알 수 있음**
 
 ### 
 ![image](https://github.com/YounseoKim62/Data-Analysis-Projects-KR/assets/161654460/b1cecf1d-22f5-412c-a98d-13561b8622b8)
 
-* 주 별로 미국 변호사 협회의 무료 법률 상담 서비스에서 세번째로 많이 상담한 카테고리를 보았을 때 주거 및 노숙자 (Housing and Homelessness)가 가장 많이 상담된 것을 알수있음
-*  여러 주에서 주거 및 노숙자 문제가 많이 상담된 것을 보아 주거 안전성, 세입자 권리 및 노숙자 문제와 관련된 문제가 많다는 것을 알 수 있음음
+* 주 별로 미국 변호사 협회의 무료 법률 상담 서비스에서 세번째로 많이 상담한 카테고리를 보았을 때 **주거 및 노숙자 (Housing and Homelessness)가 가장 많이 상담된 것을 알수있음**
+*  여러 주에서 주거 및 노숙자 문제가 많이 상담된 것을 보아 **주거 안전성, 세입자 권리 및 노숙자 문제와 관련된 법률상담이 많다는 것을 알 수 있음**
 
