--- a/DataFest2023/프로젝트 상세 설명.md
+++ b/DataFest2023/프로젝트 상세 설명.md
@@ -107,3 +107,13 @@
 * 주 별로 미국 변호사 협회의 무료 법률 상담 서비스에서 세번째로 많이 상담된 카테고리는 **주거 및 노숙자(Housing and Homelessness)** 로 나타남
 * 이는 여러 주에서 주거 안정성, 세입자 권리, 노숙자 문제와 관련된 법률 상담이 많이 이루어지고 있음을 나타냄
 
+### 시간에 따른 법률 상담 카테고리별 추이 
+![trend graph](https://github.com/YounseoKim62/Data-Analysis-Projects-KR/assets/161654460/0edbeab7-12d9-4c7e-a84d-0b0a1442211f)
+
+* 2020년도 초반부터 가족 및 아동, 기타 (상해, 자연재해, 이민, 세금과 관련된 상담), 주거 및 노숙자, 노동, 고용 및 실업에 관련 법률 상담의 급격한 증가가 관찰됨
+* 가족 및 아동 상담의 증가는 코로나로 인해 재택근무가 증가하면서 가족 간의 갈등이 많아졌기 때문으로 추측
+* 기타 카테고리 상담의 증가는 코로나 관련 법률 상담이 자연재해로 분류되었기 때문임
+* 주거 및 노숙자 상담의 증가는 팬데믹 동안 경제적 어려움으로 주거 불안정성이 심화되었기 때문으로 추정됨
+* 노동, 고용 및 실업 관련 상담의 증가는 팬데믹 동안 실업률 증가와 재택근무로 인한 변화 때문으로 추정됨
+ 
+
