Update 프로젝트 상세 설명.md

--- a/DataFest2023/프로젝트 상세 설명.md
+++ b/DataFest2023/프로젝트 상세 설명.md
@@ -89,11 +89,15 @@
 
 ## Step 3 (미국 내 법률 상담 트렌드 분석)
 
+<br/> 
+
 ### 가장 많이 상담된 법률 카테고리
 ![image](https://github.com/YounseoKim62/Data-Analysis-Projects-KR/assets/161654460/75161971-a632-4db0-b4d0-60bf2c085f4e)
 
 * 주 별로 미국 변호사 협회의 무료 법률 상담 서비스에서 가장 많이 상담된 카테고리는 **가족 및 아동(Family and Children)** 으로 나타남
 * 이는 많은 주에서 이혼, 양육권 분쟁, 가정 폭력 등 가족 갈등과 관련된 법률 상담이 많이 이루어지고 있음을 나타
+
+<br/> 
 
 ### 두번째로 많이 상담된 법률 카테고리
 ![image](https://github.com/YounseoKim62/Data-Analysis-Projects-KR/assets/161654460/88b2c294-08f8-4a43-b915-c1bfb03b289d)
@@ -101,11 +105,15 @@
 * 주 별로 미국 변호사 협회의 무료 법률 상담 서비스에서 두번째로 많이 상담된 카테고리는 **기타(Others)** 로 나타남
 * 기타 카테고리에는 상해, 자연재해, 이민, 세금과 관련된 상담들이 포함되며, 이는 많은 주에서 일상 생활과 관련된 법률 상담이 많이 이루어지고 있음을 나타냄
 
+<br/> 
+
 ### 세번째로 많이 상담된 법률 카테고리
 ![image](https://github.com/YounseoKim62/Data-Analysis-Projects-KR/assets/161654460/b1cecf1d-22f5-412c-a98d-13561b8622b8)
 
 * 주 별로 미국 변호사 협회의 무료 법률 상담 서비스에서 세번째로 많이 상담된 카테고리는 **주거 및 노숙자(Housing and Homelessness)** 로 나타남
 * 이는 여러 주에서 주거 안정성, 세입자 권리, 노숙자 문제와 관련된 법률 상담이 많이 이루어지고 있음을 나타냄
+
+<br/> 
 
 ### 시간에 따른 법률 상담 카테고리별 추이 
 ![trend graph](https://github.com/YounseoKim62/Data-Analysis-Projects-KR/assets/161654460/0edbeab7-12d9-4c7e-a84d-0b0a1442211f)
@@ -115,5 +123,30 @@
 * 기타 카테고리 상담의 증가는 코로나 관련 법률 상담이 자연재해로 분류되었기 때문임
 * 주거 및 노숙자 상담의 증가는 팬데믹 동안 경제적 어려움으로 주거 불안정성이 심화되었기 때문으로 추정됨
 * 노동, 고용 및 실업 관련 상담의 증가는 팬데믹 동안 실업률 증가와 재택근무로 인한 변화 때문으로 추정됨
- 
 
+<br/> 
+
+## Step 4 (실제 적용 프로토타입)
+
+<br/> 
+
+### 의뢰인의 무료 법률 서비스 자격 판별, 효율적인 변호사와 의뢰인 매칭
+![image](https://github.com/YounseoKim62/Data-Analysis-Projects-KR/assets/161654460/c778e406-18a9-4b4f-9fea-8dbef37a751c)
+
+![image](https://github.com/YounseoKim62/Data-Analysis-Projects-KR/assets/161654460/9b29b63d-813d-446a-ab85-0e87abcad67a)
+
+* 프로토타입을 사용함으로써 의뢰인이 무료 법률 지원 상담 서비스의 수입과 자산 기준에 부합하는지 확인 할 수 있음
+* 또한, 의뢰인이 신청한 상담의 법률 카테고리를 전문 분야로 가지고 있는 변호사를 추천해주며, 변호사가 지금까지 얼마나 많은 의뢰인들과 상담했는지, 어떤 전문 분야에서 가장 많이 상담했는지, 얼마나 많은 의뢰를 처리했는지 한눈에 파악할 수 있음
+
+<br/> 
+
+### 미국 내 법률 상담 트렌드 분석
+
+<br/> 
+
+![image](https://github.com/YounseoKim62/Data-Analysis-Projects-KR/assets/161654460/16eb19c9-2492-4d11-9a9e-35236cb8e611)
+
+![image](https://github.com/YounseoKim62/Data-Analysis-Projects-KR/assets/161654460/1edbb54a-1ad6-4b10-8684-f0a788c62b72)
+
+* 프로토타입을 사용함으로써 변호사는 어떤 법률 카테고리에 상담이 집중되는지 파악하여 업무를 효율적으로 배분하고, 시간이 많이 소요되는 카테고리에 대한 대비를 할 수 있음
+* 또한, 변호사 협회는 상담 빈도가 높은 카테고리에 인적 자원과 시간을 집중 투입하여 효율적인 자원 관리를 할 수 있음
