--- a/DataFest2023/프로젝트 상세 설명.md
+++ b/DataFest2023/프로젝트 상세 설명.md
@@ -1,7 +1,8 @@
 # The American Statistical Association DataFest - 최우수상 수상 (2023)
+* Team Megabyte (Younseo Kim, Yong Jun Choi, Woosung Lim, Hyeongkwon Kim & Taehwan Lee)
 * 2023.03.25 ~ 2023.03.26
-* 프로그래밍 언어: R (tidyverse, dplyr, ggplot2), Excel
-* 데이터 분석 기법: EDA, 데이터 전처리, 알고리즘 개발
+* 프로그래밍 스킬: R (tidyverse, dplyr, ggplot2), Tableau, Excel, Figma
+* 사용된 스킬: EDA, 데이터 전처리, 알고리즘 개발, 프로토타입 제작
 
 <br/>
 
@@ -150,3 +151,10 @@
 
 * 프로토타입을 사용함으로써 변호사는 어떤 법률 카테고리에 상담이 집중되는지 파악하여 업무를 효율적으로 배분하고, 시간이 많이 소요되는 카테고리에 대한 대비를 할 수 있음
 * 또한, 변호사 협회는 상담 빈도가 높은 카테고리에 인적 자원과 시간을 집중 투입하여 효율적인 자원 관리를 할 수 있음
+
+<br/> 
+
+## 발표 동영상
+<br/> 
+
+![video](https://youtu.be/SAb4ZrnstgU?si=zH3qy5G_peOXxVju)
