Update 프로젝트 상세 설명.md

--- a/DataFest2023/프로젝트 상세 설명.md
+++ b/DataFest2023/프로젝트 상세 설명.md
@@ -154,7 +154,11 @@
 
 <br/> 
 
-## 발표 동영상
+## TEAM MEGABYTE
+
 <br/> 
 
-![video](https://youtu.be/SAb4ZrnstgU?si=zH3qy5G_peOXxVju)
+![KakaoTalk_20240612_154623131](https://github.com/YounseoKim62/Data-Analysis-Projects-KR/assets/161654460/fa48678e-eccc-406b-836b-c569b7652918)
+
+
+
